# FF_A350_avitab

./: CMakeLists.txt  FF_A350_avitab.sln  FF_A350_avitab.vcxproj  MIT-LICENSE.txt  Makefile  README.md  main.cpp  plugin.cpp
.github/workflows/: cmake.yml
lin_x64/: FF_A350_avitab.xpl
obj64/: main.cppdep
src/: CMakeLists.txt  main.cpp
win_x64/: FF_A350_avitab.xpl
